Infra-Clinic/k8s-manifests/development/prontclinic-api/prontclinic-api-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prontclinic-api-redis
  namespace: ptcc-development
  labels:
    app: prontclinic-api-redis
    component: redis
    project: "ProntClinic"
    environment: "development"
spec:
  type: ClusterIP
  selector:
    app: prontclinic-api-redis
    component: redis
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
    protocol: TCP
  sessionAffinity: None
