Infra-Clinic/k8s-manifests/development/prontclinic-api/prontclinic-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prontclinic-api-service
  namespace: ptcc-development
  labels:
    app: prontclinic-api
    project: "ProntClinic"
    environment: "development"
spec:
  selector:
    app: prontclinic-api
  ports:
  - name: http
    port: 5000
    targetPort: 5000
    protocol: TCP
  - name: metrics
    port: 9090
    targetPort: 9090
    protocol: TCP
  type: ClusterIP
