Infra-Clinic/k8s-manifests/development/prontclinic-api/prontclinic-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prontclinic-api-ingress
  namespace: ptcc-development
  labels:
    app: prontclinic-api
    project: "ProntClinic"
    environment: "development"
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api-d.prontclinic.com.br
    secretName: prontclinic-api-tls
  rules:
  - host: api-d.prontclinic.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prontclinic-api-service
            port:
              number: 5000
